<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="10dp"
            android:id="@+id/closeActivity"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:background="@drawable/icon_back" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="40dp"
                android:layout_height="38dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guidline"
                android:background="@drawable/icon_dropdown"/>
            <android.support.constraint.Guideline
                android:id="@+id/guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.26" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/userfullname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_fullname"
            android:inputType="textEmailAddress"
            android:textStyle="italic|bold"
            android:padding="12dp"/>
        <EditText
            android:id="@+id/register_email_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:textStyle="italic|bold"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/register_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone_number"
            android:inputType="phone"
            android:textStyle="italic|bold"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/register_street"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_street_address"
            android:inputType="text"
            android:textStyle="italic|bold"
            android:padding="12dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/register_home_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/register_home_number"
                android:layout_marginRight="20dp"
                android:inputType="text"
                android:textStyle="italic|bold"
                android:padding="12dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_new_password"
            android:inputType="textPassword"
            android:textStyle="italic|bold"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword"
            android:textStyle="italic|bold"
            android:padding="12dp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/register_create_account"
            android:background="@drawable/register_button_background"/>
    </LinearLayout>
</LinearLayout>
