<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/loginTop"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/closeActivity"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="7dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/icon_back" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="40dp"
                android:layout_height="38dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guidline"
                android:background="@drawable/icon_dropdown"/>
            <android.support.constraint.Guideline
                android:id="@+id/guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.26" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/loginArea"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_phone"
            android:padding="12dp"
            android:textStyle="italic|bold"
            android:inputType="text"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:textStyle="italic|bold"
            android:inputType="textPassword"
            android:padding="12dp"/>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/main_login"
            android:background="@drawable/login_button_background"/>
    </LinearLayout>
</LinearLayout>
