<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliverDetail">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/closeButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginVertical="8dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/icon_back" />
        </LinearLayout>
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginBottom="1dp"
            android:background="#f5f5f5">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="295dp"
                    android:background="@drawable/icon_start" >
                    <ImageView
                        android:id="@+id/itemIcon"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginVertical="8dp"
                        android:background="@drawable/iconitem" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#fff">

                    <TextView
                        android:layout_marginHorizontal="10dp"
                        android:text="Thông tin đặt hàng"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:paddingTop="8dp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textSize="23dp"
                        android:textStyle="bold"
                        android:textColor="#444"/>
                    <EditText
                        android:id="@+id/user_full_name"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_weight="1"
                        android:hint="Họ tên"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textStyle="italic|bold" />
                    <EditText
                        android:enabled="false"
                        android:layout_marginHorizontal="20dp"
                        android:id="@+id/user_street_address"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_street_address"
                        android:inputType="text"
                        android:textStyle="italic|bold"
                        android:padding="12dp"/>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginHorizontal="20dp">
                        <EditText
                            android:enabled="false"
                            android:id="@+id/user_home_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_home_number"
                            android:layout_marginRight="20dp"
                            android:inputType="text"
                            android:textStyle="italic|bold"
                            android:padding="12dp"/>

                        <EditText
                            android:enabled="false"
                            android:id="@+id/user_kebele"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_kebele"
                            android:inputType="text"
                            android:textStyle="italic|bold"
                            android:padding="12dp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="5dp"
                        android:layout_weight="1"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:orientation="vertical"
                    android:background="#f5f5f5"
                    android:paddingTop="5dp">
                    <TextView
                        android:id="@+id/itemTitle"
                        android:layout_marginHorizontal="10dp"
                        android:text="Tên sản phẩm"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="#444"
                        android:background="#fff"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_marginVertical="2dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:layout_marginHorizontal="10dp"
                        android:background="#fff">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginLeft="25dp"
                            android:paddingLeft="10dp"
                            android:textStyle="bold"
                            android:paddingTop="2dp"
                            android:text="Giá:"/>

                        <TextView
                            android:id="@+id/itemPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:paddingLeft="10dp"
                            android:text="2500 "
                            android:textSize="20dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:paddingLeft="10dp"
                            android:text="Số lượng :"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/itemNumPics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25dp"
                            android:paddingLeft="10dp"
                            android:textStyle="bold"
                            android:paddingTop="2dp"
                            android:textSize="20dp"
                            android:text="0"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>